fix quotes not showing

--- a/src/app/quote-form/quote-form.component.css
+++ b/src/app/quote-form/quote-form.component.css
@@ -1,6 +1,6 @@
 .jumbotron{
     background-color: rgb(133, 126, 66);
-    height: 50px;
+    height: 0px;
     padding-bottom: 47px;
     padding-left: 20px;
 }
